tests/compile-error/interactor-icpc/interactor/checker.cpp
i am not an interactor, i am just an actor
